# agent-platform

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_GUIDE.md  COVER_LETTER.md  Makefile  PORTFOLIO.md  README.md  README.pt-BR.md  docker-compose.yml  frontend-test.html  package-lock.json  run_chao_tests.sh
backend/: .dockerignore  Dockerfile  alembic.ini  dev-requirements.txt  package-lock.json  pyproject.toml  requirements.txt  setup.py  test_api_key.py
backend/app/: __init__.py  main.py  test_api_key.py  test_key2.py
backend/app/analytics/: __init__.py  queries.py  timescale_queries.py
backend/app/api/websocket/: __init__.py  event_handler.py
backend/app/application/commands/: __init__.py  consume_resource.py  lease_gpu.py  register_agent.py  settle_invoice.py
backend/app/application/handlers/: command_handlers.py  event_handlers.py  gpu_handlers.py
backend/app/application/services/: idempotency.py  rate_limiter.py
backend/app/core/: auth.py  config.py  dependencies.py  exceptions.py  logging.py
backend/app/domain/aggregates/: agent.py  api_key.py  billing_session.py  gpu_lease.py  invoice.py  provider.py
backend/app/domain/events/: agent_events.py  api_key_events.py  base.py  billing_events.py  gpu_events.py  payment_events.py  provider_events.py
backend/app/domain/repositories/: event_store.py  snapshot_repo.py
backend/app/infrastructure/blockchain/: __init__.py  delegation_contract.py  payment_verifier.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_analytics_views.py  003_api_keys_table.py  004_occ_constraint.py
backend/scripts/: bootstrap_api_key.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_agents.py  test_api_keys.py  test_auth.py  test_consume.py  test_gpu_endpoints.py  test_health.py  test_invoices.py  test_pix.py  test_pix_client.py
backend/tests/unit/: __init__.py  test_agent_aggregate.py  test_agents_endpoint.py  test_api_key_aggregate.py  test_api_keys_endpoint.py  test_auth.py  test_billing_session_aggregate.py  test_command_handlers.py  test_consume_endpoint.py  test_delegation_contract.py  test_error_handler.py  test_event_handlers.py  test_event_store.py  test_event_upcasters.py  test_exceptions.py  test_gpu_lease_aggregate.py  test_idempotency.py  test_invoice_aggregate.py  test_invoices_endpoint.py  test_ionet_client.py  test_kafka_producer.py  test_payment_verifier.py  test_pix_client.py  test_pix_endpoint.py  test_pix_webhook.py  test_provider_aggregate.py  test_rate_limit_middleware.py  test_rate_limiter.py  test_redis_cache.py  test_redis_lua_client.py  test_security_middleware.py  test_web3_client.py  test_websocket_handler.py
(+148 files in other folders)
