[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-platform-backend"
version = "0.1.0"
description = "Backend for Agent Platform - Event Sourcing + x402"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.29.0",
    "alembic>=1.13.0", "redis[hiredis]>=5.0.0",
    "aiokafka>=0.10.0", "web3>=6.0.0",
    "pydantic>=2.0.0", "pydantic-settings>=2.0.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
[tool.ruff]
line-length = 100
target-version = "py311"
